Make tests more readable